# fgl-tools

./: .gitignore  CLAUDE.md  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
hooks/scripts/: validate-fgl.sh
plans/: 2026-04-25-fgl-validator-lark.md
skills/fgl-layout/: SKILL.md
skills/fgl-layout/references/: commands.md  coordinate-math.md  image-to-fgl.md  ink-budget.md  opcodes.md  orientation.md  validation.md  variables.md
skills/fgl-layout/scripts/: png_to_fgl.py
skills/fgl-layout/templates/: basic-ticket.fgl  event-ticket.fgl
src/fgl_validator/: __init__.py  __main__.py  ast.py  diagnostic.py  fgl.lark  parser.py  profile.py  rule_set.py  rules.py  transformer.py  validate.py
tests/: test_cli.py  test_corpus.py  test_parser_smoke.py  test_validate_wiring.py
tests/fixtures/invalid/: bad_coords.expected.json  bad_coords.fgl  bad_coords_lemur.fgl  barcode_over_ink_budget.expected.json  barcode_over_ink_budget.fgl  hw_left_set.expected.json  hw_left_set.fgl  missing_terminator.fgl  two_tickets_second_missing_p.expected.json  two_tickets_second_missing_p.fgl  unknown_opcode.expected.json  unknown_opcode.fgl  wrong_arity.expected.json  wrong_arity.fgl
tests/fixtures/valid/: barcode_at_ink_ceiling.fgl  barcode_only.fgl  cfg_dump.fgl  euro_chars.fgl  jersey_boys_q_terminator.fgl  jersey_boys_rtf.fgl  jersey_boys_ttf.fgl  minimal_p.fgl  minimal_q.fgl  two_tickets.fgl
