[project]
name = "fgl-validator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["lark>=1.1.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fgl-validate = "fgl_validator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fgl_validator"]
